overflow problem fixed

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,3 @@
-body {
+.no-overflow {
   overflow: hidden;
 }
